force-app/main/default/objects/More4appsDocumentation__x/More4appsDocumentation__x.object-meta.xml
<CustomObject>
    <externalDataSource>More4apps_Documentation</externalDataSource>
    <externalName>More4appsDocumentation</externalName>
    <label>Documentation</label>
    <pluralLabel>Documentation</pluralLabel>
</CustomObject>