force-app/main/default/objects/More4appsDocumentation__x/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description
  >This is the formatted documentation URL Link for use in the More4apps Community</description>
    <label>Link</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>