force-app/main/default/objects/More4appsDocumentation__x/fields/longdesc__c.field-meta.xml
<CustomField>
    <fullName>longdesc__c</fullName>
    <externalDeveloperName>longdesc</externalDeveloperName>
    <label>longdesc</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>