force-app/main/default/objects/More4appsDocumentation__x/fields/shortdesc__c.field-meta.xml
<CustomField>
    <fullName>shortdesc__c</fullName>
    <externalDeveloperName>shortdesc</externalDeveloperName>
    <label>shortdesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>