force-app/main/default/objects/More4appsDocumentation__x/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <externalDeveloperName>Summary</externalDeveloperName>
    <label>Summary</label>
    <length>1000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>