force-app/main/default/objects/More4appsDocumentation__x/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <externalDeveloperName>Title</externalDeveloperName>
    <label>Title</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>