force-app/main/default/objects/More4appsDocumentation__x/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <externalDeveloperName>url</externalDeveloperName>
    <label>url</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>